--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "main": "./index.js",
   "dependencies": {
     "bindings": "~1.2.0",
-    "debug": "~1.0.0",
+    "debug": "2",
     "nan": "~1.8.2",
     "readable-stream": "1.0"
   },
