--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "stream"
   ],
   "version": "1.2.1",
+  "license": "MIT",
   "author": "Nathan Rajlich <nathan@tootallnate.net> (http://tootallnate.net)",
   "repository": {
     "type": "git",
