--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "bindings": "~1.2.0",
     "debug": "2",
-    "nan": "~2.1.0",
+    "nan": "2",
     "readable-stream": "1.0"
   },
   "devDependencies": {
