Update to support node 12

--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "url": "git://github.com/TooTallNate/node-ogg.git"
   },
   "main": "./index.js",
+  "gypfile": true,
   "dependencies": {
-    "bindings": "~1.2.0",
-    "debug": "2",
-    "nan": "2",
-    "readable-stream": "1.0"
+    "bindings": "^1.5.0",
+    "nan": "2.14.0",
+    "readable-stream": "3.6.0"
   },
   "devDependencies": {
-    "mocha": "^3.5.3",
-    "ogg-packet": "^1.0.0"
+    "gyp": "^0.5.0",
+    "mocha": "^3.5.3"
   },
   "scripts": {
     "test": "mocha --reporter spec"
